infrastructure/config/ingresses.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik
  namespace: traefik
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.kevin.tomalias.com`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
  tls:
   secretName: tomalias-com-tls
